# popular-movies

./: CNAME  LICENSE  README.md  _shared.py  index.html  main.py  movies.json  pyproject.toml  series.html  series.json  series.py  swedish.html  swedish.json  swedish.py
.github/workflows/: ci.yml
movies/: movies.json
series/: series.json
swedish/: swedish.json
