[tool.poetry]
name = "popular-movies"
version = "1.0.0"
description = "Scrapes a list of popular movies from Rotten Tomatoes."
authors = ["Jonas Stendahl <jonas@stendahl.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"
cinemagoer = "^2022.12.27"
requests = "^2.28.2"
sentry-sdk = "^1.14.0"
tmdbv3api = "^1.7.7"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
