[project]
name = "popular-movies"
version = "1.0.0"
description = "Scrapes a list of popular movies from Rotten Tomatoes."
authors = ["Jonas Stendahl <jonas@stendahl.me>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "requests>=2.31.0,<3",
    "sentry-sdk>=2.0.0,<3",
    "tenacity>=9.0.0,<10",
    "tmdbv3api>=1.9.0<2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
